fixing up alignment of filter input

--- a/src/app/cardList.component.css
+++ b/src/app/cardList.component.css
@@ -8,3 +8,8 @@
 .p-field * {
   display: block;
 }
+.search-box-table{
+  display: flex;
+  justify-content: space-between;
+}
+.
